hphp/test/zend/good/Zend/tests/traits/language016.php.expectf

Fatal error: Unknown trait 'T2' in %s/language016.php on line 8
